# GoGoG

./: .gitignore  CLAUDE.md  Go0.md  Go0_start.md  Go1_variables.md  GoGoG_Technical_Approach.md  README-UV.md  README.md  go.mod  pyproject.toml  setup.sh  start.go  story_line.md  test.py  tour.go
Ch01/01_05b/: go.mod
Ch02/02_02b/: main.go
Ch02/02_03b/: main.go
backend/: .env.example  __init__.py  go.mod  go.sum  main.py
backend/api/: __init__.py  handlers.py  routes.py
backend/auth/: __init__.py  auth.py  auth_routes.py
backend/cmd/server/: main.go
backend/content/: __init__.py  content_routes.py
backend/db/: __init__.py  database.py
backend/gamification/: __init__.py  gamification_routes.py
backend/internal/api/: routes.go
backend/internal/auth/: auth.go
backend/internal/content/: content.go
backend/internal/db/: database.go  schema.sql
backend/internal/gamification/: gamification.go
backend/internal/models/: models.go
backend/internal/progress/: progress.go
backend/models/: __init__.py  models.py
backend/progress/: __init__.py  progress_routes.py
backend/schemas/: __init__.py  auth.py
backend/tests/: test_api.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/components/code/: CodeEditor.tsx  CodeOutput.tsx
frontend/src/hooks/: useVisualizationEngine.ts
frontend/src/pages/: ChallengeView.tsx  HomePage.tsx  LearningModule.tsx  NotFound.tsx
frontend/src/store/: useStore.ts
frontend/src/styles/: index.css
(+5 files in other folders)
